<resources>
    <string name="app_name">MobileOrgActivity</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="empty_main">Welcome to MobileOrg</string>
    <string name="downloading">Downloading</string>
    <string name="view_as_document">View as document</string>
    <string name="title">Title</string>
    <string name="search_results_for">Search results for</string>
    <string name="body">Click here to set the body text</string>
    <string name="tags">Tags</string>
    <string name="priority">Priority</string>
    <string name="todo_state">Todo state</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="search_hint">Search</string>
    <string name="warning">WARNING!</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="prompt_delete_file">Are you sure you want to delete this file?</string>
    <string name="prompt_node_delete">Are you sure you want to delete this node?</string>
    <string name="prompt_node_archive">Are you sure you want to archive this node?</string>
    <string name="prompt_node_edit">Are you sure you want to discard changes?</string>
    <string name="prompt_cert_changed">The WebDAV Certificate has changed, below are the details.  If you are okay with this click \'Accept\' otherwise click \'Deny\'.  If you accept the new certificate you will need to re-issue your Synchronize command</string>
    <string name="sync_not_configured">Sync not configured</string>
    <string name="sync_successful">Synchronization Successful</string>
    <string name="sync_error_occured">Error occurred during sync:</string>
    <string name="sync_synchronizing_changes">Synchronizing changes</string>
    <string name="sync_error_server_certificate">Error with server certificate:</string>
    <string name="sync_wait">Synchronizing, please wait…</string>
    <string name="sync_failed">Synchronization failed</string>
    <string name="sync_plugin">MobileOrg Synchronization</string>
    <string name="sync_plugin_info">This plugin allows you to trigger a MobileOrg Sync from Locale or Tasker.  If you are okay with this click \'Accept\' otherwise click \'Deny\'</string>
    <string name="sync_plugin_message">Synchronize</string>
    <string name="error_sqlio">There was a problem reading from the database, is your drive corrupted or is the SDCard mounted?</string>
    <string name="error_generic_database">Unhandled database error: %s</string>
    <string name="error_file_not_found">The file %s was not found</string>
    <string name="error_file_permissions">Permissions error on file %s</string>
    <string name="error_file_read">An error occurred while reading from file %s</string>
    <string name="error_file_write">An error occurred while writing to file %s</string>
    <string name="error_invalid_url">URL Contains Invalid Characters: %s</string>
    <string name="error_synchronizer_type_unknown">Unknown Synchronizer Method %s"</string>
    <string name="error_local_storage_method_unknown">Local storage method %s unknown</string>
    <string name="error_unsupported_encoding">Encountered unsupported encoding on file %s</string>
    <string name="error_url_fetch">An error occurred attempting to fetch the url %s</string>
    <string name="error_url_fetch_detail">An error occurred attempting to fetch the url %1$s: %2$s</string>
    <string name="error_url_put_detail">An error occurred attempting to upload the url %1$s: %2$s</string>
    <string name="error_opening_database">An error occurred attempting to create database.  Check your storage settings in the preferences menu, and make sure your storage card is available</string>
    <string name="error_url_put">An error occurred while attempting to put the URL %s</string>
    <string name="error_setting_no_calendar">NO CALENDAR</string>
    <string name="error_dropbox_fetch">There was an issue reading the dropbox path %1$s: %2$s</string>
    <string name="error_loading_node">Error loading node</string>
    <string name="error_bad_url">The url %s is not properly formatted</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_apg_not_found">APG not found</string>
    <string name="error_apg_version_not_supported">APG version not supported</string>
    <string name="menu_outline">Outline</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_capture">Capture</string>
    <string name="menu_capture_simple">Simple Capture</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_search">Search</string>
    <string name="menu_help">Help</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_addtag">Add Tag</string>
    <string name="menu_adddeadline">Add Deadline</string>
    <string name="menu_addscheduled">Add Scheduled</string>
    <string name="menu_timestamp">Add Timestamp</string>
    <string name="menu_view">View</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_delete_file">Delete File</string>
    <string name="menu_advanced">Advanced</string>
    <string name="menu_recover">Recover</string>
    <string name="menu_clockin">Clock in</string>
    <string name="menu_archive">Archive</string>
    <string name="menu_archive_tosibling">Archive to sibling</string>
    <string name="up_one_level">Up one level</string>
    <string name="please_wait">Please wait…</string>
    <string name="signing_in">Signing in</string>
    <string name="pick_folder">Choose a folder to sync from:</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="path">Absolute Path</string>
    <string name="login">Log in</string>
    <string name="login_webdav">Check Login</string>
    <string name="login_ssh">Check SSH Login</string>
    <string name="i_want_to_sync_using">I want to sync using:</string>
    <string name="wizard_webdav">a WebDAV server</string>
    <string name="wizard_dropbox">a Dropbox account</string>
    <string name="wizard_ubuntuone">an UbuntuOne account</string>
    <string name="wizard_sdcard">my SD card</string>
    <string name="wizard_ssh">an SSH server</string>
    <string name="wizard_null">nothing (capture only)</string>
    <string name="log_in_to_dropbox">Log in to Dropbox</string>
    <string name="log_in_to_ubuntuone">Log in to Ubuntu One</string>
    <string name="log_in_to_webdav">Log in to your WebDAV server</string>
    <string name="log_in_to_ssh">Log in to your SSH server</string>
    <string name="ssh_inform_choose_pub_file">OR select a file containing your *private* key (requires a file explorer program to be installed)</string>
    <string name="ssh_choose_file_button">Select your *private* key file</string>
    <string name="null_sync_description">This is a capture only synchronizer.  It will not attempt to synchronize to any source.</string>
    <string name="dropbox_login_info">This will redirect you to a login form.  After logging in it will return you to this screen to continue.</string>
    <string name="url">URL</string>
    <string name="wizard_dropbox_email_hint">user@host.com</string>
    <string name="wizard_ubuntu_email_hint">user@host.com</string>
    <string name="preferences">Preferences</string>
    <string name="preference_actions">Actions</string>
    <string name="preference_edit">Edit</string>
    <string name="preference_interface">Interface</string>
    <string name="preference_general">General</string>
    <string name="preference_advanced">Advanced</string>
    <string name="preference_autosync">Background sync</string>
    <string name="preference_autosync_summary">Automatically synchronize MobileOrg database in the background</string>
    <string name="preference_autosync_interval">Background sync interval</string>
    <string name="preference_autosync_interval_summary">How often the background sync service should run</string>
    <string name="preference_view_wrap_lines">Wrap lines</string>
    <string name="preference_view_wrap_lines_summary">Using custom line wrapping when viewing nodes</string>
    <string name="preference_default_todo_summary">Default todo when capturing files</string>
    <string name="preference_default_todo">Default todo</string>
    <string name="preference_clear_db_summary">Clean up the storage database</string>
    <string name="preference_clear_db">Clear database</string>
    <string name="preferences_widget_summary">Preferences for a Widget</string>
    <string name="preference_widget_title">Widget Preferences</string>
    <string name="preference_other">Other</string>
    <string name="preference_version">Version</string>
    <string name="preference_storage_mode">Storage Mode</string>
    <string name="preference_storage_summary">Where to store the org files</string>
    <string name="preference_storage">Storage</string>
    <string name="preference_recursion_level">Child nodes to display</string>
    <string name="preference_recursion_level_summary">How many levels of child nodes to display on view</string>
    <string name="preference_view">View</string>
    <string name="preference_synchronization">Synchronization</string>
    <string name="preference_sync_source_summary">Where to sync Org files from</string>
    <string name="preference_sync_source">Synchronization mode</string>
    <string name="preference_dropbox_login">Login</string>
    <string name="preference_dropbox_login_summary">Login to retrieve an OAuth token</string>
    <string name="preference_dropbox_path">Path</string>
    <string name="preference_dropbox_path_summary">Dropbox path to index.org file</string>
    <string name="preference_ubuntuone_login">Login</string>
    <string name="preference_ubuntuone_path">Path</string>
    <string name="preference_ubuntuone_login_summary">Login to retrieve an OAuth token</string>
    <string name="preference_ubuntuone_path_summary">UbuntuOne path to index.org file</string>
    <string name="preference_fontsize_summary">Font size used in outline.</string>
    <string name="preference_fontsize">Font size</string>
    <string name="preference_clear_db_dialog_title">Clear DB?</string>
    <string name="preference_clear_db_dialog_message">Are you sure want to clear DB?</string>
    <string name="preference_exclude_tags">Exclude tags inheritance</string>
    <string name="preference_exclude_tags_summary">Tags separated by \":\" to exclude from inheritance.</string>
    <string name="preference_combine_block_agenda_summary">Combines block agendas into one node, with separators. Needs resync of agenda file to take effect</string>
    <string name="preference_combine_block_agenda">Combine block agendas</string>
    <string name="preference_calendar">Calendar</string>
    <string name="preference_calendar_display">Display</string>
    <string name="preference_calendar_clear">Clear phone calendar</string>
    <string name="preference_calendar_clear_summary">Clears the phones\' calendar of all entries inserted by MobileOrg</string>
    <string name="preference_calendar_synch_summary">Synchronize scheduled items with the system calendar</string>
    <string name="preference_calendar_synch">Synchronize with calendar</string>
    <string name="preference_calendar_name_summary">Choose calendar MobileOrg will use</string>
    <string name="preference_calendar_name">Calendar name</string>
    <string name="edit_date_start">Start</string>
    <string name="edit_date_end">End</string>
    <string name="edit_date_date">Date</string>
</resources>