<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_view"
        android:icon="@drawable/ic_menu_view"
        android:showAsAction="always"
        android:title="@string/menu_view"/>
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_menu_edit"
        android:showAsAction="always"
        android:title="@string/menu_edit"/>
    <item
        android:id="@+id/menu_delete_file"
        android:icon="@drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/menu_delete_file"/>
    <item
        android:id="@+id/menu_recover"
        android:icon="@drawable/ic_menu_archive"
        android:showAsAction="ifRoom"
        android:title="@string/menu_recover"/>

</menu>