<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
  <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/sync_plugin_info"
      android:paddingBottom="40dp"/>
  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="horizontal">
    <Button
        android:id="@+id/plugin_sync_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"/>
    <Button
        android:id="@+id/plugin_sync_deny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deny"/>
  </LinearLayout>
</LinearLayout>
