<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">      
        <LinearLayout
           android:orientation="vertical"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content">
	<LinearLayout
	   android:orientation="vertical"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:paddingTop="20dp"
	   android:paddingLeft="20dp"
	   android:paddingRight="20dp"
	   android:id="@+id/wizard_ubuntuone">
	   <TextView
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:gravity="center"
	      android:text="@string/log_in_to_ubuntuone"
	      android:textSize="20dp"
	      android:textStyle="bold"
	      android:paddingBottom="20dp"/>
	   <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/email"
	      android:textSize="20dp"/>
	   <EditText
	      android:id="@+id/wizard_ubuntu_email"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:textSize="20dp"
	      android:inputType="textEmailAddress"
	      android:hint="@string/wizard_ubuntu_email_hint"
	      android:singleLine="true"/>
	   <TextView
	      android:paddingTop="10dp"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/password"
	      android:textSize="20dp"/>
	   <EditText
	      android:id="@+id/wizard_ubuntu_password"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:textSize="20dp"
	      android:inputType="textPassword"
	      android:password="true"
	      android:singleLine="true"/>
	   <Button
	      android:layout_marginTop="10dp"
	      android:id="@+id/wizard_ubuntu_login_button"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/login"
	      android:textSize="20dp"/>
	      </LinearLayout>
	   <View
	       android:layout_width="fill_parent" 
	       android:layout_height="1dp"
	       android:layout_weight="1.0" 
	      />
	      <include layout="@layout/wizard_navbar"/>
	</LinearLayout>
</ScrollView>
