<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">      
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/warning"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:paddingBottom="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_cert_changed"
        android:paddingBottom="20dp"/>
    <TextView
        android:id="@+id/cert_hash_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"/>
    <TextView
        android:id="@+id/cert_new_descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
      <Button
          android:id="@+id/cert_conflict_accept"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/accept"/>
      <Button
          android:id="@+id/cert_conflict_deny"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/deny"/>
    </LinearLayout>
  </LinearLayout>
</ScrollView>