<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="3"
        android:hint="@string/edit_date_date" />

    <Button
        android:id="@+id/dateTimeStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="3"
        android:hint="@string/edit_date_start" />

    <Button
        android:id="@+id/dateTimeEndButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="3"
        android:hint="@string/edit_date_end" />

    <Button
        android:id="@+id/dateRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/ic_input_delete"
        android:padding="10dp" />

</TableRow>